@@ -1,5 +1,12 @@
 2009-07-07 Quek Shu Yang (quekshuy@gmail.com)
 ==============================================
+	* Added garbage collection functionality to objects
+		- bthandler.c
+		- baseniffmodule.c
+
+
+2009-07-07 Quek Shu Yang (quekshuy@gmail.com)
+==============================================
     * Added data structures to represent a packet received on HCI from the hardware
         - SniffPacket
         - _LMPPacket
